# utl

./: .bazelignore  .clang-format  .gitignore  .gitmodules  BUILD.bazel  CMakeLists.txt  LICENSE  MODULE.bazel  README.md
lib/: BUILD.bazel  CMakeLists.txt
lib/common/: BUILD.bazel  CMakeLists.txt
lib/iterator/: BUILD.bazel  CMakeLists.txt  uiterator.hpp
lib/spsc/: BUILD.bazel  CMakeLists.txt  queue.hpp
lib/uvector/: BUILD.bazel  CMakeLists.txt  uvector.cpp  uvector.hpp
tests/: BUILD.bazel  CMakeLists.txt
tests/spsc/: BUILD.bazel  CMakeLists.txt  queue_core_behavior.cpp
tests/util/: BUILD.bazel  CMakeLists.txt  test.hpp
utils/: format.sh
