module(
    name = "utl",
    version = "0.1.0",
)

bazel_dep(name = "rules_cc", version = "0.2.13")
bazel_dep(name = "allocazam", version = "0.1.0")
git_override(
    module_name = "allocazam",
    commit = "16a86b464bc1a7b49f6bcc9fd1c701fa123420a4",
    init_submodules = True,
    remote = "https://github.com/dr7ana/allocazam",
)
