module(
    name = "utl",
    version = "0.1.0",
)

bazel_dep(name = "rules_cc", version = "0.2.13")
bazel_dep(name = "allocazam", version = "0.1.0")
git_override(
    module_name = "allocazam",
    commit = "61139e2b46c744330ad862b2c019ac804ea6a331",
    init_submodules = True,
    remote = "https://github.com/dr7ana/allocazam",
)
