module(
    name = "utl",
    version = "0.1.0",
)

bazel_dep(name = "rules_cc", version = "0.2.13")
bazel_dep(name = "allocazam", version = "0.1.0")
git_override(
    module_name = "allocazam",
    commit = "9afc67ed45760323f5cd8b91f62dd2eaca8a5d79",
    init_submodules = True,
    remote = "https://github.com/dr7ana/allocazam",
)
