load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "uvector",
    hdrs = glob([
        "*.hpp",
    ]),
    linkstatic = True,
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [
        "//lib/iterator:uiterator",
        "@allocazam//:liballocazam",
    ],
)
